--- a/public_html/minicourse/index.css
+++ b/public_html/minicourse/index.css
@@ -2,10 +2,14 @@ body, html {
     height: 100%;
     width: 100%;
 }
-.container, .row {
+.container{
     height: 100%;  !important;
 }
 
 *{
     word-wrap:break-word;
+}
+
+.col{
+    padding-top: 10px;
 }
