--- a/public_html/allMinicourses/index.css
+++ b/public_html/allMinicourses/index.css
@@ -6,6 +6,10 @@ html,body{
     /*min-height:100%;!important;*/
 }
 
+*{
+    ;
+}
+
 .container-fluid{
     /*height: 100%;  !important;*/
     padding: 0;
@@ -80,3 +84,40 @@ html,body{
 #logout{
     cursor: pointer;
 }
+
+
+
+
+/*.regular-checkbox {*/
+    /*-webkit-appearance: none;*/
+    /*background-color: #EEE;*/
+    /*border: 1px solid #cacece;*/
+    /*!*box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);*!*/
+    /*padding: 9px;*/
+    /*border-radius: 3px;*/
+    /*display: inline-block;*/
+    /*position: relative;*/
+/*}*/
+
+
+/*.regular-checkbox:active, .regular-checkbox:checked:active {*/
+    /*!*box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);*!*/
+/*}*/
+
+/*.regular-checkbox:checked {*/
+    /*-webkit-appearance: none;*/
+    /*background-color: blue;*/
+    /*border: 1px solid #adb8c0;*/
+    /*!*box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);*!*/
+    /*color: #99a1a7;*/
+/*}*/
+
+
+/*.regular-checkbox:checked:after {*/
+    /*content: '\2713';*/
+    /*font-size: 13px;*/
+    /*position: absolute;*/
+    /*top: 1px;*/
+    /*left: 3px;*/
+    /*color: white;*/
+/*}*/
