--- a/public_html/minicourse/index.css
+++ b/public_html/minicourse/index.css
@@ -1,6 +1,6 @@
 body, html {
-    height: 100%;
-    width: 100%;
+    background-color: whitesmoke;
+    height: 100%; !important;
 }
 .container{
     height: 100%;  !important;
@@ -10,6 +10,42 @@ body, html {
     word-wrap:break-word;
 }
 
-.col{
-    padding-top: 10px;
+.container-fluid{
+    /*height: 100%;  !important;*/
+    padding: 0;
+    margin: 0;
+}
+.row{
+    /*min-width: 100%;*/
+    margin: 0;
+    /*margin-bottom: 30px;*/
+}
+.headerbar{
+    /*height:60px;*/
+    background-color: white;
+
+    z-index: 10;
+}
+
+.header-links:hover{
+    text-decoration: none;
+    cursor: pointer;
+}
+.header-links:focus{
+    text-decoration: none;
+}
+
+.dropdown-menu{
+    left:10%; !important;
+}
+
+.jumbotron{
+    border-radius: 0;
+}
+.btn-style:hover{
+    text-decoration: none;
+    cursor: pointer;
+}
+#logout{
+    cursor: pointer;
 }
