--- a/public_html/minicourse/index.css
+++ b/public_html/minicourse/index.css
@@ -18,7 +18,7 @@ body, html {
 .row{
     /*min-width: 100%;*/
     margin: 0;
-    /*margin-bottom: 30px;*/
+    margin-bottom: 30px;
 }
 .headerbar{
     /*height:60px;*/
