--- a/public_html/allMiniCourses/library.css
+++ b/public_html/allMiniCourses/library.css
@@ -338,6 +338,10 @@ html, body {
     cursor: pointer;
 }
 
+.checkbox-style{
+    margin-right:15px;!important;
+}
+
 /*.regular-checkbox {*/
 /*-webkit-appearance: none;*/
 /*background-color: #EEE;*/
