--- a/public_html/minicourse/index.css
+++ b/public_html/minicourse/index.css
@@ -49,3 +49,380 @@ body, html {
 #logout{
     cursor: pointer;
 }
+
+html, body {
+    background-color: #f4f6f9;
+    height: 100%;
+!important;
+}
+
+.container-fluid {
+    padding: 0;
+    margin: 0;
+}
+
+.container{
+    margin-top: 30px;
+}
+
+.row {
+    margin: 0;
+}
+
+.header-bar {
+    background-color: white;
+    z-index: 10;
+    height: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.header-logo{
+    height: 40px;
+    padding-left: 30px;
+}
+
+.header-links-div{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.header-links{
+    text-align: center;
+    color: #999;!important;
+}
+
+.header-links:hover {
+    text-decoration: none;
+    color: #1589ee;
+    cursor: pointer;
+}
+
+.header-links:focus {
+    text-decoration: none;
+}
+
+.header-dropdown{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.header-profile-img{
+    height: 30px;
+    border-radius: 50%;
+    border: solid 1px gray;
+}
+
+.header-dropdown-menu{
+    padding: 0;
+    margin-top:10px;
+    border: none;
+    border-radius: 0;
+    border-bottom-right-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+    background-color: #FFF;
+}
+
+.header-dropdown-menu-li{
+    padding: 10px;
+    padding-left: 20px;
+    border-bottom: solid 1px #DDD;
+}
+
+.header-dropdown-menu-li-a{
+    color:#666;
+}
+
+.header-jumbotron{
+    margin-bottom: 0;
+    background-image: url(./../images/bg.jpg);
+}
+
+.jumbotron-title{
+    color: floralwhite;
+}
+
+.jumbotron-description{
+    color: floralwhite;
+    font-size: x-large;
+}
+
+.filter-column{
+    padding: 0;
+    background-color: white;
+    height:auto;
+    box-shadow: #DDD 0 0 8px 1px ;
+    border-radius: .125rem;
+}
+
+.filter-column-divs{
+    width: 100%;
+    height: auto;
+    border-bottom: solid 2px #EEE;
+}
+
+.filter-column-divs-heading{
+    padding: 20px;
+    padding-bottom: 15px;
+    padding-left: 30px;
+    width: 100%;
+    color: black;
+}
+
+.filter-column-divs-content{
+    padding-left: 30px;
+    padding-right: 20px;
+    padding-bottom: 13px;
+}
+
+.filter-bar{
+    height: auto;
+    background-color: white;
+    box-shadow: #DDD 0 0 8px 1px;
+    border-radius: .25rem;
+    margin-bottom: 30px;
+    padding: 15px;
+    padding-left: 20px;
+}
+
+.filter-bar-title{
+    color: #999;
+    padding: 0;
+    align-self: center;
+}
+
+.filter-bar-content{
+    padding: 0;
+    padding-left: 15px;
+}
+
+.filter-bar-ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.filter-bar-ul-li{
+    float:left;
+    margin: 5px;
+    height:auto;
+}
+
+.filter-bar-ul-li-filter{
+    width: 100%;
+    height: 100%;
+    background-color: #1589ee;
+    color: white;
+    padding: 5px;
+    border-radius: .125rem;
+    padding-left: 8px;
+    padding-right: 8px;
+}
+
+.filter-bar-clearall{
+    color: #1589ee;
+    padding: 0;
+    align-self: center;
+    font-size: 14px;
+    padding-right: 10px;
+    cursor: pointer;
+}
+
+.minicourses{
+    background-color: white;
+    height: auto;
+    box-shadow: #DDD 0 0 8px 1px ;
+    border-radius: .125rem;
+}
+
+.minicourses-list{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.minicourses-list-li{
+    width: 100%;
+    height: auto;
+    padding: 20px;
+    border-bottom: solid 2px #EEE;
+}
+
+.minicourse-div{
+    width: 100%;
+    height: auto;
+}
+
+.minicourse-img{
+    width: 100%;
+    height: 190px;
+    border-radius: .25rem;
+}
+
+.minicourse-img:hover{
+    cursor:pointer;
+}
+
+.minicourse-content{
+    padding-right: 0;
+    padding-left: 25px;
+    padding-top: 12px;
+}
+
+.minicourse-chps{
+    width: 100%;
+    color: #888;
+    font-size: 14px;
+    margin-bottom: 3px;
+}
+
+.minicourse-title{
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+
+.minicourse-title:hover{
+    cursor: pointer;
+}
+
+.minicourse-description{
+    font-size: 14px;
+    color: #AAA;
+}
+
+.minicourse-tags{
+    width: 100%;
+    height: auto;
+    padding-top: 25px;
+}
+
+.minicourse-tag{
+    width: auto;
+    margin-right: 30px;
+}
+
+.tag-title{
+    color: #000;
+    width: auto;
+    font-weight: 500;
+    font-size:14px;
+    margin-bottom: 10px;
+}
+
+.tag-content{
+    color: #AAA;
+    width: auto;
+    font-size: 14px;
+}
+
+.enrol-style{
+    border-radius: 100px;
+    background-color: #4bca81;
+    padding:10px 45px;
+    width: auto;
+    color: white;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.enrol-style:hover, .enrol-style:visited {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+}
+
+.enrol-style:focus {
+    text-decoration: none;
+}
+
+
+
+.dropdown-menu {
+    left: 10%;
+!important;
+}
+
+.jumbotron {
+    border-radius: 0;
+}
+
+.label-style {
+    color: #888;
+}
+
+.list-inline {
+    padding-left: 20px;
+    list-style: none;
+    padding-right: 20px;
+}
+
+.li-card {
+    padding: 20px;
+}
+
+.card-img-top {
+    height: 200px;
+}
+
+.card {
+    border-radius: 0;
+
+}
+
+.card:hover {
+    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .2);
+    transition: all 150ms linear;
+    transform: scale(1.05, 1.05);
+}
+
+.btn-style:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.iframe {
+
+    width: 100%;
+}
+
+#logout {
+    cursor: pointer;
+}
+
+.checkbox-style{
+    margin-right:15px;!important;
+}
+
+/*.regular-checkbox {*/
+/*-webkit-appearance: none;*/
+/*background-color: #EEE;*/
+/*border: 1px solid #cacece;*/
+/*!*box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);*!*/
+/*padding: 9px;*/
+/*border-radius: 3px;*/
+/*display: inline-block;*/
+/*position: relative;*/
+/*}*/
+
+/*.regular-checkbox:active, .regular-checkbox:checked:active {*/
+/*!*box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);*!*/
+/*}*/
+
+/*.regular-checkbox:checked {*/
+/*-webkit-appearance: none;*/
+/*background-color: blue;*/
+/*border: 1px solid #adb8c0;*/
+/*!*box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);*!*/
+/*color: #99a1a7;*/
+/*}*/
+
+/*.regular-checkbox:checked:after {*/
+/*content: '\2713';*/
+/*font-size: 13px;*/
+/*position: absolute;*/
+/*top: 1px;*/
+/*left: 3px;*/
+/*color: white;*/
+/*}*/
+
