--- a/public_html/css/landing-page.css
+++ b/public_html/css/landing-page.css
@@ -11,6 +11,9 @@ body, html {
 .cover {
     height: 100%;
     width: 100%;
+    background-image: -moz-linear-gradient( 90deg, rgb(21,137,238) 0%, rgb(18,117,204) 100%);
+    background-image: -webkit-linear-gradient( 90deg, rgb(21,137,238) 0%, rgb(18,117,204) 100%);
+    background-image: -ms-linear-gradient( 90deg, rgb(21,137,238) 0%, rgb(18,117,204) 100%);
 }
 
 #info {
