--- a/public_html/allMiniCourses/library.css
+++ b/public_html/allMiniCourses/library.css
@@ -185,6 +185,7 @@ html, body {
 
 .minicourses-list{
     list-style-type: none;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
@@ -203,7 +204,7 @@ html, body {
 
 .minicourse-img{
     width: 100%;
-    height: 190px;
+
     border-radius: .25rem;
 }
 
