--- a/public_html/students/mycourses/index.css
+++ b/public_html/students/mycourses/index.css
@@ -204,12 +204,13 @@ html, body {
 
 .minicourse-img{
     width: 100%;
+    box-shadow: 0px 0px 10px 0px rgba(6, 28, 63, 0.1);
     border-radius: .25rem;
 }
 
-.minicourse-img:hover{
-    cursor:pointer;
-}
+/*.minicourse-img:hover{*/
+    /*cursor:pointer;*/
+/*}*/
 
 .minicourse-content{
     padding-right: 0;
@@ -230,9 +231,9 @@ html, body {
     margin-bottom: 5px;
 }
 
-.minicourse-title:hover{
-    cursor: pointer;
-}
+/*.minicourse-title:hover{*/
+    /*cursor: pointer;*/
+/*}*/
 
 .minicourse-description{
     font-size: 14px;
