--- a/public_html/allMiniCourses/library.css
+++ b/public_html/allMiniCourses/library.css
@@ -83,7 +83,7 @@ html, body {
 
 .header-jumbotron{
     margin-bottom: 0;
-    background-image: url(./../images/bg.jpg);
+    background-image: url(./../images/header-pattern.png);
 }
 
 .jumbotron-title{
