--- a/public_html/lesson/index.css
+++ b/public_html/lesson/index.css
@@ -10,6 +10,10 @@ body, html {
     word-wrap:break-word;
 }
 
+h5{
+    font-size: 16px;
+}
+
 .container-fluid{
     /*height: 100%;  !important;*/
     padding: 0;
@@ -49,3 +53,4 @@ body, html {
 #logout{
     cursor: pointer;
 }
+/*border-bottom: solid 2px #EEEEEE;*/
