--- a/public_html/minicourse/index.css
+++ b/public_html/minicourse/index.css
@@ -40,7 +40,7 @@ body, html {
 }
 
 .a-style{
-    color: #999;
+    color: #444;
     font-weight: 500;
     border: none !important;
     padding: 0;
@@ -49,10 +49,15 @@ body, html {
 
 .a-style:hover{
 
-    color: #999;
+    color: #1589EE;
     font-weight: 500;
 }
 
+.nav-tabs .nav-link.active{
+
+    color: #1589EE;
+    font-weight: 500;
+}
 
 .container-fluid{
     /*height: 100%;  !important;*/
